--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
 		"web": {
 			"favicon": "./assets/favicon.png"
 		},
-		"plugins": ["expo-router"],
+		"plugins": ["expo-router", "react-native-cloud-storage"],
 		"experiments": {
 			"typedRoutes": true,
 			"tsconfigPaths": true
