--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
 		"assetBundlePatterns": ["**/*"],
 		"ios": {
 			"supportsTablet": true,
+			"usesIcloudStorage": true,
 			"bundleIdentifier": "com.music.player",
 			"infoPlist": {
 				"UIBackgroundModes": ["audio"]
@@ -24,7 +25,8 @@
 			"adaptiveIcon": {
 				"foregroundImage": "./assets/adaptive-icon.png",
 				"backgroundColor": "#000"
-			}
+			},
+			"package": "com.music.player"
 		},
 		"web": {
 			"favicon": "./assets/favicon.png"
