--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
 		"expo-blur": "~12.9.2",
 		"expo-constants": "~15.4.5",
 		"expo-dev-client": "~3.3.11",
+		"expo-file-system": "~16.0.9",
 		"expo-linear-gradient": "~12.7.2",
 		"expo-linking": "~6.2.2",
 		"expo-router": "~3.4.8",
 		"expo-status-bar": "~1.11.1",
+		"music-metadata": "^10.6.5",
 		"react": "18.2.0",
 		"react-native": "0.73.6",
 		"react-native-awesome-slider": "^2.5.1",
 		"react-native-cloud-storage": "^2.2.1",
+		"react-native-document-picker": "^9.3.1",
 		"react-native-fast-image": "^8.6.3",
 		"react-native-gesture-handler": "~2.14.0",
 		"react-native-image-colors": "^2.4.0",
@@ -39,6 +42,7 @@
 		"@types/react": "~18.2.45",
 		"@typescript-eslint/eslint-plugin": "^7.4.0",
 		"@typescript-eslint/parser": "^7.4.0",
+		"ajv": "^8.17.1",
 		"eslint": "^8.57.0",
 		"eslint-plugin-react": "^7.34.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
